# pySORS

./: README.md  REFERENCES.md  example.ipynb  optimal method hyperparameters.ipynb  pyproject.toml
notebooks/: optimal RSPI_SPSA hyperparameters on rosenbrock.ipynb
pysors/: _minimize.py  ahds.py  bds.py  rs.py  rspi.py  stp.py
pysors/pySORS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pysors/: _minimize.py  ahds.py  bds.py  rs.py  rspi.py  utils.py
