[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pySORS"
description = "Fork of second-order-random-search with scipy.minimize-like interface."
version = "2024.09.13"
dependencies = [
  "numpy",
]
requires-python = ">= 3.9"
readme = "README.md"
authors = [
  {name = "Ivan Nikishev", email = "nkshv2@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["optimization", "optimizers", "blackbox", "black box", "random search", "second order"]


[project.urls]
Homepage = "https://github.com/inikishev/pySORS"
Repository = "https://github.com/inikishev/pySORS"
Issues = "https://github.com/inikishev/pySORS/isses"

[tool.setuptools]
package-dir = {"" = "pysors"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]